# gepa-mcp

./: .gitignore  INSTALL_GUIDE.md  LICENSE  README.md  install.sh  main.py  pyproject.toml  run_server.py
src/gepa_mcp/: __init__.py  claude_native_enhancements.py  claude_native_features.py  enhanced_features.py  gepa_core.py  gepa_server.py  gepa_server_extended.py  meta_gepa.py
