[project]
name = "gepa-mcp"
version = "0.1.0"
description = "MCP server integrating GEPA (Genetic-Evolutionary Prompt Architecture) for automatic prompt optimization"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "K Rob", email = "krobertson639@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.9.2",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/developzir/gepa-mcp"
"Bug Tracker" = "https://github.com/developzir/gepa-mcp/issues"
"Repository" = "https://github.com/developzir/gepa-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gepa_mcp"]
